--- a/index.html
+++ b/index.html
@@ -1,17 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Adri - Developer</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
-  </head>
-  <body>
-    <main>
-        <h1>Welcome to My Website</h1>  
-    </main>
-    <script src="index.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Adri Ghosal | Web Developer</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      font-family: 'Inter', sans-serif;
+    }
+
+    body {
+      background-color: #f8f9fa;
+      color: #333;
+      line-height: 1.6;
+    }
+
+    header {
+      background-color: #0d6efd;
+      color: white;
+      padding: 2rem 1rem;
+      text-align: center;
+    }
+
+    header h1 {
+      font-size: 2.5rem;
+    }
+
+    header p {
+      font-size: 1.2rem;
+      margin-top: 0.5rem;
+    }
+
+    nav {
+      text-align: center;
+      margin: 1rem 0;
+    }
+
+    nav a {
+      margin: 0 1rem;
+      text-decoration: none;
+      color: #0d6efd;
+      font-weight: 600;
+    }
+
+    section {
+      max-width: 900px;
+      margin: 2rem auto;
+      padding: 0 1rem;
+    }
+
+    h2 {
+      color: #0d6efd;
+      margin-bottom: 1rem;
+    }
+
+    .project {
+      margin-bottom: 2rem;
+    }
+
+    .project h3 {
+      margin-bottom: 0.5rem;
+    }
+
+    .skills-list {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 0.5rem;
+    }
+
+    .skill {
+      background-color: #e9ecef;
+      padding: 0.5rem 1rem;
+      border-radius: 20px;
+      font-size: 0.9rem;
+    }
+
+    footer {
+      text-align: center;
+      padding: 2rem 1rem;
+      background-color: #f1f3f5;
+      color: #555;
+    }
+
+    a {
+      color: #0d6efd;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Adri Ghosal</h1>
+    <p>Web Developer crafting responsive and user-first websites & apps</p>
+  </header>
+
+  <nav>
+    <a href="#about">About</a>
+    <a href="#projects">Projects</a>
+    <a href="#skills">Skills</a>
+    <a href="#contact">Contact</a>
+  </nav>
+
+  <section id="about">
+    <h2>About Me</h2>
+    <p>
+      I'm a full-stack web developer passionate about building clean, functional, and engaging digital experiences. With a strong foundation in JavaScript, React, and Node.js, I value performance, accessibility, and seamless user experiences.
+    </p>
+  </section>
+
+  <section id="projects">
+    <h2>Projects</h2>
+
+    <div class="project">
+      <h3>DevConnect</h3>
+      <p>A social platform for developers to share projects and collaborate. Built with React, Redux, Node.js, and MongoDB.</p>
+    </div>
+
+    <div class="project">
+      <h3>Adri's Portfolio CMS</h3>
+      <p>A custom CMS for managing this portfolio. Built with Next.js, Strapi, and Tailwind CSS.</p>
+    </div>
+
+    <div class="project">
+      <h3>WeatherSnap</h3>
+      <p>Minimal weather app using OpenWeather API with auto-location and responsive design.</p>
+    </div>
+  </section>
+
+  <section id="skills">
+    <h2>Skills</h2>
+    <div class="skills-list">
+      <span class="skill">HTML5</span>
+      <span class="skill">CSS3</span>
+      <span class="skill">JavaScript</span>
+      <span class="skill">React</span>
+      <span class="skill">Node.js</span>
+      <span class="skill">Express</span>
+      <span class="skill">MongoDB</span>
+      <span class="skill">Git</span>
+      <span class="skill">Figma</span>
+    </div>
+  </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Email: <a href="mailto:yourname@email.com">yourname@email.com</a></p>
+    <p>GitHub: <a href="#">github.com/adri-ghosal</a></p>
+    <p>LinkedIn: <a href="#">linkedin.com/in/adri-ghosal</a></p>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 Adri Ghosal. All rights reserved.</p>
+  </footer>
+</body>
 </html>
