--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <body>
   <header>
     <h1>Adri Ghosal</h1>
-    <p>Web Developer crafting responsive and user-first websites & apps</p>
+    <p>Web Developer skilled in HTML, CSS, JavaScript, and Node.js</p>
   </header>
 
   <nav>
@@ -107,7 +107,7 @@
   <section id="about">
     <h2>About Me</h2>
     <p>
-      I'm a full-stack web developer passionate about building clean, functional, and engaging digital experiences. With a strong foundation in JavaScript, React, and Node.js, I value performance, accessibility, and seamless user experiences.
+      I'm a web developer passionate about building clean, functional, and engaging digital experiences. I specialize in front-end and back-end development using HTML, CSS, JavaScript, and Node.js. I value performance, accessibility, and seamless user experiences.
     </p>
   </section>
 
@@ -116,12 +116,12 @@
 
     <div class="project">
       <h3>DevConnect</h3>
-      <p>A social platform for developers to share projects and collaborate. Built with React, Redux, Node.js, and MongoDB.</p>
+      <p>A social platform for developers to share projects and collaborate. Built with React and Node.js.</p>
     </div>
 
     <div class="project">
       <h3>Adri's Portfolio CMS</h3>
-      <p>A custom CMS for managing this portfolio. Built with Next.js, Strapi, and Tailwind CSS.</p>
+      <p>A custom CMS for managing this portfolio. Built with Next.js and Tailwind CSS.</p>
     </div>
 
     <div class="project">
@@ -136,20 +136,15 @@
       <span class="skill">HTML5</span>
       <span class="skill">CSS3</span>
       <span class="skill">JavaScript</span>
-      <span class="skill">React</span>
       <span class="skill">Node.js</span>
-      <span class="skill">Express</span>
-      <span class="skill">MongoDB</span>
-      <span class="skill">Git</span>
-      <span class="skill">Figma</span>
+      <span class="skill">React</span>
     </div>
   </section>
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:yourname@email.com">yourname@email.com</a></p>
-    <p>GitHub: <a href="#">github.com/adri-ghosal</a></p>
-    <p>LinkedIn: <a href="#">linkedin.com/in/adri-ghosal</a></p>
+    <p>Email: <a href="mailto:ghosaladrivit@gmail.com">ghosaladrivit@gmail.com</a></p>
+    <p>GitHub: <a href="#">github.com/adrighosal</a></p>
   </section>
 
   <footer>
