--- a/index.html
+++ b/index.html
@@ -58,14 +58,6 @@
       margin-bottom: 1rem;
     }
 
-    .project {
-      margin-bottom: 2rem;
-    }
-
-    .project h3 {
-      margin-bottom: 0.5rem;
-    }
-
     .skills-list {
       display: flex;
       flex-wrap: wrap;
@@ -99,7 +91,7 @@
 
   <nav>
     <a href="#about">About</a>
-    <a href="#projects">Projects</a>
+    <a href="#experience">Experience</a>
     <a href="#skills">Skills</a>
     <a href="#contact">Contact</a>
   </nav>
@@ -111,23 +103,9 @@
     </p>
   </section>
 
-  <section id="projects">
-    <h2>Projects</h2>
-
-    <div class="project">
-      <h3>DevConnect</h3>
-      <p>A social platform for developers to share projects and collaborate. Built with React and Node.js.</p>
-    </div>
-
-    <div class="project">
-      <h3>Adri's Portfolio CMS</h3>
-      <p>A custom CMS for managing this portfolio. Built with Next.js and Tailwind CSS.</p>
-    </div>
-
-    <div class="project">
-      <h3>WeatherSnap</h3>
-      <p>Minimal weather app using OpenWeather API with auto-location and responsive design.</p>
-    </div>
+  <section id="experience">
+    <h2>Experience</h2>
+    <p><strong>Technology Student Association</strong><br>Member since 2023</p>
   </section>
 
   <section id="skills">
