--- a/index.html
+++ b/index.html
@@ -106,6 +106,11 @@
   <section id="experience">
     <h2>Experience</h2>
     <p><strong>Technology Student Association</strong><br>Member since 2023</p>
+    <ul>
+      <li>2024 NJ State Conference</li>
+      <li>2025 NJ State Conference</li>
+      <li>2025 National Conference Nashville</li>
+    </ul>
   </section>
 
   <section id="skills">
@@ -122,7 +127,6 @@
   <section id="contact">
     <h2>Contact</h2>
     <p>Email: <a href="mailto:ghosaladrivit@gmail.com">ghosaladrivit@gmail.com</a></p>
-    <p>GitHub: <a href="#">github.com/adrighosal</a></p>
   </section>
 
   <footer>
