--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@
     a {
       color: #0d6efd;
     }
+
+    .experience-list {
+      padding-left: 2rem;
+    }
   </style>
 </head>
 <body>
@@ -106,7 +110,7 @@
   <section id="experience">
     <h2>Experience</h2>
     <p><strong>Technology Student Association</strong><br>Member since 2023</p>
-    <ul>
+    <ul class="experience-list">
       <li>2024 NJ State Conference</li>
       <li>2025 NJ State Conference</li>
       <li>2025 National Conference Nashville</li>
