--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:ghosaladrivit@gmail.com">ghosaladrivit@gmail.com</a></p>
+    <p>Email: <a href="mailto:adrighosal@gmail.com">adrighosal@gmail.com</a></p>
   </section>
 
 
